# TMbed

./: README.md  pyproject.toml
examples/: sample_4.pred
onnx/: export_tmbed_model.py
onnx/cnn_onnx/: cv_0.onnx  cv_1.onnx  cv_2.onnx  cv_3.onnx  cv_4.onnx
tmbed/: __init__.py  model.py
