[project]
name = "tmbed"
version = "1.0.1"
description = "Transmembrane protein predictor using embeddings"
authors = [{name = "Michael Bernhofer", email = "Michael.Bernhofer@tum.de"}]
maintainers = [{name = "Michael Bernhofer", email = "Michael.Bernhofer@tum.de"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch >= 2.6.0",
]

[project.scripts]
tmbed = "tmbed.tmbed:run"

[project.urls]
Homepage = "https://github.com/BernhoferM/TMbed"
Issues = "https://github.com/BernhoferM/TMbed/issues"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["tmbed"]

[tool.setuptools.package-data]
tmbed = ["models/cnn/*.pt"]
